# embedded

./: .gitignore  main.py  plants.yaml  plants2.yaml  pyproject.toml  requirements.txt
nextjs/backend/: README.md  index.ts  package.json
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
