[project]
name = "embedded"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.2.2",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "fsspec>=2024.6.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "opencv-python==4.13.0.90",
    "packaging==26.0",
    "pillow==12.1.0",
    "polars==1.38.0",
    "polars-runtime-32==1.38.0",
    "psutil==7.2.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "scipy==1.17.0",
    "setuptools==80.10.2",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "typing-extensions==4.15.0",
    "ultralytics==8.4.11",
    "ultralytics-thop==2.0.18",
    "urllib3==2.6.3",
]
